syntax = "proto3";

package average;

option java_package = "com.proto.average";
option java_multiple_files = true;

message AverageRequest{
  int32 number = 1;
}

message AverageResult{
  double average = 1;
}

message SquareRootRequest{
  int32 number = 1;
}

message SquareRootResponse{
  double number_root = 1;
}


service CalculateAverageService{
  rpc CalculateAverage(stream AverageRequest) returns (AverageResult){};
  //this will throw an exception if the sent number is negative
  rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse){};
}